Fix invisible lock icon

--- a/css/theme_black-white.css
+++ b/css/theme_black-white.css
@@ -6,7 +6,7 @@
   - Instructions: https://ao3.org/works/65849527
   - Repository:   https://github.com/ZerafinaCSS/neos
   - License:      MIT
-  - Updated:      2026-Mar-14 18:47 UTC
+  - Updated:      2026-Apr-08 18:21 UTC
 
   ==========================================================";
 }
@@ -199,7 +199,7 @@ https://coolors.co/000000-8b8b8b-b4b4b4-c1c1c1-d6d6d6-f0f0f0-f4f4f4-f8f8f8-fffff
   --header-icon:         invert(100%);
   --header-icon-hgl:     invert(71%);              /* hover/focus */
   --kudos-icon:          brightness(0) saturate(100%) invert(55%) sepia(16%) saturate(1795%) hue-rotate(303deg) brightness(95%) contrast(106%);
-  --lock-icon:           invert(100%);
+  --lock-icon:           none;
   --stats-icon:          invert(55%);
   --stat-chart:          saturate(0%);
   --rich-txt-editor:     none;
